# python-template

./: Dockerfile  LICENSE  README.md  config.toml  docker-compose.yml  pyproject.toml
.github/: Dockerfile  docker-compose.yml
.github/workflows/: checks.yml
app_name/tests/: test_main.py
requirements/: README.md  dev.txt  prod.txt
scripts/: run_checks.sh  run_dev.sh
src/: main.py
src/tests/: test_main.py
